# TradeEngine

./: .env.example  .gitignore  Makefile  README.md  SPRINT_1_UPSTOX_HISTORICAL_DATA.md  SPRINT_4_BACKTESTING_ENGINE.md  SPRINT_5_LABELING_ENGINE_AND_AI_DATASET_BUILDER.md  backtest_equity.csv  backtest_trades.csv  feature_history_output.csv  feature_validation_output.csv  pyproject.toml  raw_history_ohlcv.csv  requirements.txt
analyze/: analyze_inside_bar_report.md
docs/: SCRIPTS.md  VWAP_CONTINUATION_HYBRID_SEARCH_2026_03.md
models/: model_12m_5m_oos.pkl  model_12m_5m_oos_9m3m.pkl  model_12m_5m_oos_9m3m_metadata.json  model_12m_5m_oos_9m3m_v2.pkl  model_12m_5m_oos_9m3m_v2_metadata.json  model_12m_5m_oos_metadata.json  model_12m_5m_tuned_oos_metadata.json  model_12m_5m_tuned_oos_v2_metadata.json  model_12m_5m_v1.pkl  model_12m_5m_v1_metadata.json  model_v1.pkl  model_v1_metadata.json  model_v2.pkl  model_v2_metadata.json  model_v3.pkl  model_v3_metadata.json
scripts/: build_ml_dataset.py  dev.sh  evaluate_model.py  export_features_15m_from_raw.py  export_features_1m.py  export_features_csv.py  export_features_history.py  feature_validation_report.py  grid_search_vwap.py  oos_tune_ml.py  oos_validate_ml.py  predict_from_model.py  run_backtest.py  run_vwap_hybrid_preset.py  setup_research_workflow.py  setup_vwap_continuation_research.py  sweep_icici_strategy.py  train_model.py  walk_forward_evaluate.py  walk_forward_inside_bar_ml.py  walk_forward_orb_ml.py  walk_forward_vwap.py
tests/: test_backtester.py  test_config.py  test_data_processor_cast_types.py  (+23 more)
(+34 files in other folders)
